feat: add first module carrousel

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,8 @@
 @import "tailwindcss";
 
+/* Swiper Carousel */
+@import "swiper/css";
+
 @plugin "tailwindcss-animate";
 @import "tw-animate-css";
 
